# tshotkeytrigger

./: .clangd  LICENSE  README.md  THIRD_PARTY_LICENSES  datafile.c  datafile.h  error.h  main.c  meson.build
.github/workflows/: build.yml
